# thaliac

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  build.sh  grammar.ebnf  vcpkg.json
include/core/: constexpr_optimizer.hpp  expr.hpp  expr_view.hpp  node.hpp  token.hpp
src/: main.cpp
src/core/: constexpr_optimizer.cpp  expr_view.cpp  token.cpp
